--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>Javeria's WD Files</title>
+  </head>
+  <body>
+    <h1>WD Assignment Files</h1>
+    
+  </body>
+</html>
