--- a/article.html
+++ b/article.html
@@ -9,8 +9,9 @@
         <h3>Be a Cause of Someone's <strong>Happiness</strong>!</h3>
           <p>Donate your old usable clothes to someone in need. Bring pants, shirts, dress, hats, belts, socks, purses, or anything thing that could be used to protect one from the harsh weather and provide better survival conditions.</p>
       <h2>When and Where??</h2>
-        <p>Starting from the beginning of the holy month of Ramadan till Eid-ul-Fitr, donate as much as possible and help people in need. Zakat (<em>almsgiving</em>) given as clothes are also accepted.</p>
-        <p>Call your nearby mosques in the city of Canton to drop off any donations. Tell more people and encourage them to donate and help as many people in need. There will be a grand lunch held on Eid to appreciate all the donation made.</p>
-        <p>Thank You Everyone! Always remember, <q>The best among you are those who bring greatest benefits to many others.</q></p>
+        <p>Starting from the beginning of Ramadan till Eid-ul-Fitr, donate as much as possible and help people in need. Any other charity donations are also accepted.</p>
+        <p>Call your nearby mosques in the city of Canton to drop off any donations. Tell more people and encourage them to donate and help as many people in need. There will be a grand lunch held (<em>more details about the lunch will be shared out soon</em>) on Eid to appreciate all the donation made.</p>
+        <p>Thank You Everyone!<br> 
+          Always remember, <q><b>The best among you are those who bring greatest benefits to many others.</b></q></p>
   </body>
 </html>
