--- a/article.html
+++ b/article.html
@@ -6,12 +6,14 @@
   <body>
     <h1>Clothing Drive Season is HERE!</h1>
       <h2>About it:</h2>
-        <h3>Be a Cause of Someone's <strong>Happiness</strong>!</h3>
-          <p>Donate your old usable clothes to someone in need. Bring pants, shirts, dress, hats, belts, socks, purses, or anything thing that could be used to protect one from the harsh weather and provide better survival conditions.</p>
+        <h3>Be a Cause of Someone's Happiness!</h3>
+          <p><strong>Donate your usable clothes and help those in need.</strong> <br>
+            This Ramadan, let's all come together to make a difference. Bring pants, shirts, dress, hats, belts, socks, purses, or anything that could provide warmth and protection from the harsh weather.</p>
       <h2>When and Where??</h2>
-        <p>Starting from the beginning of Ramadan till Eid-ul-Fitr, donate as much as possible and help people in need. Any other charity donations are also accepted.</p>
-        <p>Call your nearby mosques in the city of Canton to drop off any donations. Tell more people and encourage them to donate and help as many people in need. There will be a grand lunch held (<em>more details about the lunch will be shared out soon</em>) on Eid to appreciate all the donation made.</p>
-        <p>Thank You Everyone!<br> 
-          Always remember, <q><b>The best among you are those who bring greatest benefits to many others.</b></q></p>
+        <p>Starting from the beginning of Ramadan till Eid-ul-Fitr, please donate as much as possible to help people in need. In addition to clothing, any other charity donations are also accepted.</p>
+        <p>Call your nearby mosques in Canton to drop-off any donations. Spread the word to family and friends and encourage them to donate and help as many people in need. <br>
+          A grand lunch held on Eid to appreciate all the donations made.(<em>More details about the lunch will be shared soon</em>)</p>
+        <h4>Thank You!</h4>
+          <p>Always remember, <q><b>The best among you are those who bring greatest benefits to many others.</b></q></p>
   </body>
 </html>
