--- a/newsWebsite.html
+++ b/newsWebsite.html
@@ -10,3 +10,4 @@
           <em>Stay curious and informed, and explore the world with us at <strong>New Era Network!</strong></em></p>
         <h3>To read our lastest article about the high school Drama Club's Play ---> Click Here!</h3>
   </body>
+</html>
