--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <h1>WD Assignment Files</h1>
     <p>
       <a href="article.html">Assignment 1.4 Online Article</a>
+      <a href="newsWebsite.html">Assignment 1.6 My News Hub</a>
     </p>
     
   </body>
