--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <body>
     <h1>WD Assignment Files</h1>
     <p>
-      <a href="article.html">Assignment 1.4 Online Article</a>
+      <a href="article.html">Assignment 1.4 Online Article</a><br>
       <a href="newsWebsite.html">Assignment 1.6 My News Hub</a>
     </p>
     
