--- a/newsArticle.html
+++ b/newsArticle.html
@@ -6,5 +6,5 @@
   <body>
     <h1>High School Version of the Play <strong>The Tragedy of Hamlet</strong> Becomes a Blockbuster Success1</h1>
       <p>North's Drama Club delivered a phenomenous performance of The Tragedy of Hamlet by Shakespeare this past weekend. Selling Out every show and recieving thunderous applause from the audience, this show was a blockbuster success. The talented cast and the amazing stage design was one of the best in the school's history.</p>
-      <p><a href="newsWebsite.html">Back to Home</a></p>
+      <p><a href="newsWebsite.html">Back to Hub</a></p>
   </body>
