--- a/newsWebsite.html
+++ b/newsWebsite.html
@@ -8,6 +8,6 @@
       <h2>Bringing fresh news to our precious readers</h2>
           <p>Welcome to <strong>New Era Network!</strong> We provide you with the latest headlines, trending stories, school events and technology updates, and global news to keep you informed with engaing and reliable information. <br>
           <em>Stay curious and informed, and explore the world with us at <strong>New Era Network!</strong></em></p>
-        <h3>To read our lastest article about the high school Drama Club's Play ---> <a href="newsArticle.html">Click Here!</a></h3>
+        <h3>To read our lastest article about the high school Drama Club's Play ---> <a target="_blank" href="newsArticle.html">Click Here!</a></h3>
   </body>
 </html>
