--- a/newsArticle.html
+++ b/newsArticle.html
@@ -5,6 +5,8 @@
   </head>
   <body>
     <h1>High School Version of the Play <strong>The Tragedy of Hamlet</strong> Becomes a Blockbuster Success1</h1>
-      <p>North's Drama Club delivered a phenomenous performance of The Tragedy of Hamlet by Shakespeare this past weekend. Selling Out every show and recieving thunderous applause from the audience, this show was a blockbuster success. The talented cast and the amazing stage design was one of the best in the school's history.</p>
-      <p><a href="newsWebsite.html">Back to Hub</a></p>
+      <p>North's Drama Club delivered a phenomenous performance of The Tragedy of Hamlet by Shakespeare this past weekend. Selling Out every show and recieving thunderous applause from the audience, this show was a blockbuster success. The talented cast and the amazing stage design was one of the best in the school's history<br>
+      After months of hard work, rehearsing, and set and costume designing, they successfully captivated the audience. "We wanted to stage a play, a play that is widely known, in our version that could captivvate our audience. It was an Amazing experience from start to finish," said the Lead Actor who played the Hamlet. The production was showered with much praise for their professionalism and the energy on stage.<br>
+      During the post-performance interview, the Drama Club's director hinted that the planning for the next production had already begun, promising an even bigger and better show. It was suggested that the next play might arrive earlier than expected, but whether it will be a well-known classic like <em>Hamlet</em> or an original creation by the production team remains a mystery. To find out if it's something new or an beloved classic, stay tuned for updates---only at <strong>New Era Network</strong>!</p>
+      <p>To return to the Hub page <a href="newsWebsite.html">Click Here</a></p>
   </body>
