--- a/newsWebsite.html
+++ b/newsWebsite.html
@@ -10,9 +10,10 @@
           <em>Stay curious and informed, and explore the world with us at <strong>New Era Network!</strong></em></p>
         <h3>To read our lastest article about the high school Drama Club's Play ---> <a href="newsArticle.html">Click Here!</a><br>
           To dowload the pdf version of this article <a href="" target="_blank"> Click Here!</a></h3>
-          <p> </p>
+          <p></p>
     <h1>The Weather Channel</h1>
-          <p>The Weather Channel is an accurate website to check the weather in your location! The Weather Channel provides us with Hourly weather forecast for upto 48 hours and 10 days forecastt for the selected location.</p>
+          <p>The Weather Channel is an accurate website to check the weather in your location!<br>
+            The Weather Channel provides us with Hourly weather forecast for upto 48 hours, 10 days forecast, weekend forecast, monthly forecast for any selected location. This website also provides us with the radar map and any severe weather warnings in the US.</p>
         <h3>To check the weather in your own location, <a href="https://weather.com/weather/today/l/Canton+Township+MI?canonicalCityId=aaef33fcc0b46854a1f2f180105b93180afbba29efe62017d0195227a04c1082" target="_blank"> Click Here!</a></h3>
   </body>
 </html>
