--- a/StarterGallery.html
+++ b/StarterGallery.html
@@ -1,1 +1,19 @@
-
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>Starter Gallery</title>
+  </head>
+  <body>
+    <h1>Big Cats</h1>
+      <p> <img src="https://openverse.org/image/007c5bcb-59a4-4243-bb7b-7c0960d7fb8c?q=images+lion&p=14" alt="A black and white picture of two Lions" height="225px">
+      <hr>
+        <img src="https://openverse.org/image/8c174d2d-7953-4203-9ad2-971fa88bcbbc?q=tiger+images&p=10" alt="A black and white picture of a Tiger" height="225px">
+      <hr>
+        <img src="https://openverse.org/image/3e5781bb-4908-468f-af65-a4f9e623e2e3?q=CC+puma+images&p=3" alt="A Puma" height="225px">
+        <a href="https://www.flickr.com/photos/28577026@N02/2718449894" target="_blank"> Link to original owner: "2007-03-29 Bremerhaven 084" by Allie_Caulfield</a>
+      <hr>
+        <img src="https://openverse.org/image/066a0d4f-4a9b-445c-93f3-bf041912952c?q=CC+leopard+images&p=1" alt="A Snow Leopard" height="225px">
+        <a href="https://www.flickr.com/photos/32135758@N02/5324764310" target="_blank"> Link to original owner: "Little Laila" by jinterwas</a>
+      </p>
+  </body>
+</html>
