--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <h1>WD Assignment Files</h1>
     <p>
       <a href="article.html">Assignment 1.4 Online Article</a><br>
-      <a href="newsWebsite.html">Assignment 1.6 My News Hub</a>
+      <a href="newsWebsite.html">Assignment 1.6 My News Hub</a><br>
+      <a href="StarterGallery.html">Assignment 2.2 Starter Gallery</a>
     </p>
     
   </body>
