--- a/StarterGallery.html
+++ b/StarterGallery.html
@@ -12,7 +12,7 @@
         <img src="https://openverse.org/image/3e5781bb-4908-468f-af65-a4f9e623e2e3?q=CC+puma+images&p=3" alt="A Puma" height="225px"><br>
         <a href="https://www.flickr.com/photos/28577026@N02/2718449894" target="_blank"> Link to original owner: "2007-03-29 Bremerhaven 084" by Allie_Caulfield</a>
       <hr>
-        <img src="https://openverse.org/image/066a0d4f-4a9b-445c-93f3-bf041912952c?q=CC+leopard+images&p=1" alt="A Snow Leopard" height="225px"><br>
+        <img src="images/BigCat_Leopard.jpg" alt="A Snow Leopard" height="225px"><br>
         <a href="https://www.flickr.com/photos/32135758@N02/5324764310" target="_blank"> Link to original owner: "Little Laila" by jinterwas</a>
       </p>
   </body>
