--- a/StarterGallery.html
+++ b/StarterGallery.html
@@ -5,7 +5,7 @@
   </head>
   <body>
     <h1>Big Cats</h1>
-      <p> <img src="https://openverse.org/image/007c5bcb-59a4-4243-bb7b-7c0960d7fb8c?q=images+lion&p=14" alt="A black and white picture of two Lions" height="225px">
+      <p> <img src="images/BigCat_LionBW.jpg" alt="A black and white picture of two Lions" height="225px">
       <hr>
         <img src="https://openverse.org/image/8c174d2d-7953-4203-9ad2-971fa88bcbbc?q=tiger+images&p=10" alt="A black and white picture of a Tiger" height="225px">
       <hr>
