--- a/StarterGallery.html
+++ b/StarterGallery.html
@@ -9,7 +9,7 @@
       <hr>
         <img src="https://openverse.org/image/8c174d2d-7953-4203-9ad2-971fa88bcbbc?q=tiger+images&p=10" alt="A black and white picture of a Tiger" height="225px">
       <hr>
-        <img src="https://openverse.org/image/3e5781bb-4908-468f-af65-a4f9e623e2e3?q=CC+puma+images&p=3" alt="A Puma" height="225px"><br>
+        <img src="images/BigCat_Puma.jpg" alt="A Puma" height="225px"><br>
         <a href="https://www.flickr.com/photos/28577026@N02/2718449894" target="_blank"> Link to original owner: "2007-03-29 Bremerhaven 084" by Allie_Caulfield</a>
       <hr>
         <img src="images/BigCat_Leopard.jpg" alt="A Snow Leopard" height="225px"><br>
