--- a/StarterGallery.html
+++ b/StarterGallery.html
@@ -4,7 +4,7 @@
     <title>Starter Gallery</title>
   </head>
   <body>
-    <h1>Big Cats</h1>
+    <h1>Big Cats!!</h1>
       <p> <img src="images/BigCat_LionBW.jpg" alt="A black and white picture of two Lions" height="225px">
       <hr>
         <img src="images/BigCat_TigerBW.jpg" alt="A black and white picture of a Tiger" height="225px">
