--- a/StarterGallery.html
+++ b/StarterGallery.html
@@ -5,14 +5,14 @@
   </head>
   <body>
     <h1>Big Cats!!</h1>
-      <p> <img src="images/BigCat_LionBW.jpg" alt="A black and white picture of two Lions" height="225px">
+      <p> <img src="images/BigCat_LionBW.jpg" alt="A black and white picture of two Lions" height="225px" width="230px">
       <hr>
-        <img src="images/BigCat_TigerBW.jpg" alt="A black and white picture of a Tiger" height="225px">
+        <img src="images/BigCat_TigerBW.jpg" alt="A black and white picture of a Tiger" height="225px" width="230px">
       <hr>
-        <img src="images/BigCat_Puma.jpg" alt="A Puma" height="225px"><br>
+        <img src="images/BigCat_Puma.jpg" alt="A Puma" height="225px" width="230px"><br>
         <a href="https://www.flickr.com/photos/28577026@N02/2718449894" target="_blank"> Link to original owner: "2007-03-29 Bremerhaven 084" by Allie_Caulfield</a>
       <hr>
-        <img src="images/BigCat_Leopard.jpg" alt="A Snow Leopard" height="225px"><br>
+        <img src="images/BigCat_Leopard.jpg" alt="A Snow Leopard" height="225px" width="230px"><br>
         <a href="https://www.flickr.com/photos/32135758@N02/5324764310" target="_blank"> Link to original owner: "Little Laila" by jinterwas</a>
       </p>
   </body>
