--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <p>
       <a href="article.html">Assignment 1.4 Online Article</a><br>
       <a href="newsWebsite.html">Assignment 1.6 My News Hub</a><br>
-      <a href="StarterGallery.html">Assignment 2.2 Starter Gallery</a>
+      <a href="StarterGallery.html">Assignment 2.2 Starter Gallery</a><br>
       <a href="EmployeeInfoTable.html">Assignment 2.4 Building Tables</a>
     </p>
     
