--- a/EmployeeInfoTable.html
+++ b/EmployeeInfoTable.html
@@ -6,7 +6,7 @@
   <body>
     <h2>Codeflex Employee Information</h3>
     <p>Refer the table below for all the employee information!</p>
-    <table>
+    <table border="1">
         <caption>Employee Directory</caption>
       <tr>
         <th>Employee ID</th>
