--- a/MathTest.html
+++ b/MathTest.html
@@ -31,7 +31,7 @@
           <p>2. Biju's father Neil has 5 children. The first child is named March, the second child is April, third child is May, and the fourth child is June. What is the name of the fifth child&quest;</p>
             <textarea rows="4" cols="60" placeholder="Enter your answer and justification here"></textarea></br>
       <h4>Now you are done with the Test</h4>
-        <p>Click submit to finish the Test</p></br>
+        <p>Click submit to finish the Test</p>
       <input type="submit">
     </form>
   </body>
