--- a/MathTest.html
+++ b/MathTest.html
@@ -4,7 +4,9 @@
     <title>Math Test Form</title>
   </head>
   <body>
+    <!--start of the Test form-->
     <form>
+    <!--Header and instructions for part 1 MCQ Test-->
       <h2>Simple Math MCQ Questions!</h2>
       <p>Pick the correct option for the three questions below. Each question is 2 points. <strong>Good Luck!</strong></p>
         <p>Enter your Full Name: </p>
@@ -24,6 +26,7 @@
           <input type="radio" name="q3">6&radic;2<br>
           <input type="radio" name="q3">12<br>
           <input type="radio" name="q3">24<br>
+    <!--Header and Instructions for part 2 Written text questions-->
       <h2>Word Problems!</h2>
         <p>1. Complete the two word problems. Write your final answer and justification the text area provided below &darr;</p>
           <p>Sarah is 22 this year. Her brother, Sam, is half of Sarah's age. A few years later Sarah is 42 years old. What is Sam's age.</p>
@@ -31,7 +34,9 @@
           <p>2. Biju's father Neil has 5 children. The first child is named March, the second child is April, third child is May, and the fourth child is June. What is the name of the fifth child&quest;</p>
             <textarea rows="4" cols="60" placeholder="Enter your answer and justification here"></textarea><br>
       <h4>Now you are done with the Test</h4>
+    <!--Submission button-->
         <p>Click submit to finish the Test</p>
       <input type="submit">
+    <!--End of the Test form-->
     </form>
   </body>
