--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       <a href="newsWebsite.html">Assignment 1.6 My News Hub</a><br>
       <a href="StarterGallery.html">Assignment 2.2 Starter Gallery</a><br>
       <a href="EmployeeInfoTable.html">Assignment 2.4 Building Tables</a><br>
-      <a href="MathTest.html">Assignment 2.6 Math test Form</a>
+      <a href="MathTest.html">Assignment 2.6 Math Test Form</a>
     </p>
     
   </body>
