--- a/colorScheme.html
+++ b/colorScheme.html
@@ -1,1 +1,19 @@
-
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>Flower Bouquet Color Scheme Info</title>
+  </head>
+  <body>
+    <h2></h2>
+    <p></p>
+    <table border="1">
+        <caption></caption>
+      <tr>
+        <th></th>
+        <th></th>
+        <th></th>
+        <th colspan="2"></th>
+      </tr>
+    </table>
+  </body>
+</html>
