--- a/colorScheme.html
+++ b/colorScheme.html
@@ -4,9 +4,10 @@
     <title>Flower Bouquet Color Scheme Info</title>
   </head>
   <body>
-    <h2></h2>
-    <p></p>
-    <table border="1">
+    <h2>Flower Bouquet Color Scheme!</h2>
+    <p>Here is a table that gives the colors in the picture below in different values.</p>
+    <img src="" alt="" width="" height="">
+    <table border="1" align="center">
         <caption></caption>
       <tr>
         <th></th>
