--- a/colorScheme.html
+++ b/colorScheme.html
@@ -5,15 +5,16 @@
   </head>
   <body>
     <h2>Flower Bouquet Color Scheme!</h2>
-    <p>Here is a table that gives the colors in the picture below in different values.</p>
-    <img src="" alt="" width="" height="">
+    <p>Here is a table that gives the colors in the picture below in different values.</p><br>
+    <img src="images/FlowerBouquet.jpg" alt="A flower bouquet full of red roses, white star of bethlehem, and coral chrysanthemum" width="600px" height="600px" align="center">
     <table border="1" align="center">
-        <caption></caption>
+      <tr>
+        <th colspan="4" style="font-size:16px; font-family:Times,serif;">Colors in a Flower Bouquet</th>
+      </tr>
       <tr>
         <th></th>
         <th></th>
         <th></th>
-        <th colspan="2"></th>
       </tr>
     </table>
   </body>
