--- a/colorScheme.html
+++ b/colorScheme.html
@@ -9,30 +9,30 @@
     <img src="images/FlowerBouquet.jpg" alt="A flower bouquet full of red roses, white star of bethlehem, and coral chrysanthemum" width="240px" height="200px" align="center">
     <table border="1" align="center">
       <tr>
-        <th colspan="5" style="font-size:16px; font-family:Times,serif;">A Flower Bouquet</th>
+        <th colspan="5" style="font-size:24px; font-family:Times,serif;">A Flower Bouquet</th>
       </tr>
-      <tr>
-        <th style="background-color: #0A3457; font-color: #b7f1fd;">Colors</th>
-        <th style="background-color: #aa0a11; font-color: #fe6258;">Rose Red</th>
+      <tr style="font-size=16px">
+        <th style="background-color: #0A3457; color: #b7f1fd;">Colors</th>
+        <th style="background-color: #aa0a11; color: #fe6258;">Rose Red</th>
         <th style="background-color: #f78054;">Coral</th>
-        <th style="background-color: #123b02; font-color: #78fe79;">Leaf Green</th>
+        <th style="background-color: #123b02; color: #78fe79;">Leaf Green</th>
         <th style="background-color: #ca6778;">Blush Pink</th>
       </tr>
-      <tr>
+      <tr style="font-size=16px">
         <td style="background-color: #0A3457;">Hex Value:</td>
         <td>#aa0a11</td>
         <td>#f78054</td>
         <td>#123b02</td>
         <td>#ca6778</td>
       </tr>
-      <tr>
+      <tr style="font-size=16px">
         <td style="background-color: #0A3457;">RGB Value:</td>
         <td>rgb(170, 10, 17)</td>
         <td>rgb(247, 128, 84)</td>
         <td>rgb(18, 59, 2)</td>
         <td>rgb(202, 103, 120)</td>
       </tr>
-      <tr>
+      <tr style="font-size=16px">
         <td style="background-color: #0A3457;">HSL Value:</td>
         <td>hsl(357, 89%, 35%)</td>
         <td>hsl(16, 91%, 65%)</td>
