--- a/colorScheme.html
+++ b/colorScheme.html
@@ -6,7 +6,9 @@
   <body>
     <h2>Flower Bouquet Color Scheme!</h2>
     <p>Here is a table that gives the colors in the picture below in different values.</p><br>
-    <img src="images/FlowerBouquet.jpg" alt="A flower bouquet full of red roses, white star of bethlehem, and coral chrysanthemum" width="240px" height="200px" align="center">
+    <div style="text-align: center;">
+      <img src="images/FlowerBouquet.jpg" alt="A flower bouquet full of red roses, white star of bethlehem, and coral chrysanthemum" width="240px" height="200px" align="center">
+    </div>
     <table border="1" align="center">
       <tr>
         <th colspan="5" style="font-size:24px; font-family:Times,serif;">A Flower Bouquet</th>
