--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       <a href="StarterGallery.html">Assignment 2.2 Starter Gallery</a><br>
       <a href="EmployeeInfoTable.html">Assignment 2.4 Building Tables</a><br>
       <a href="MathTest.html">Assignment 2.6 Math Test Form</a><br>
-      <a href="colorScheme.html">Assignment 3.2 Color Scheme</a>
+      <a href="colorScheme.html">Assignment 3.2 Color Scheme Assignmnet</a>
     </p>
     
   </body>
