--- a/colorScheme.html
+++ b/colorScheme.html
@@ -15,27 +15,27 @@
       </tr>
       <tr style="font-size=16px">
         <th style="background-color: #0A3457; color: #b7f1fd;">Colors</th>
-        <th style="background-color: #aa0a11; color: #fe6258;">Rose Red</th>
+        <th style="background-color: #aa0a11; color: #fea792;">Rose Red</th>
         <th style="background-color: #f78054;">Coral</th>
         <th style="background-color: #123b02; color: #78fe79;">Leaf Green</th>
         <th style="background-color: #ca6778;">Blush Pink</th>
       </tr>
       <tr style="font-size=16px">
-        <td style="background-color: #0A3457;">Hex Value:</td>
+        <td style="background-color: #0A3457; color: #b7f1fd;">Hex Value:</td>
         <td>#aa0a11</td>
         <td>#f78054</td>
         <td>#123b02</td>
         <td>#ca6778</td>
       </tr>
       <tr style="font-size=16px">
-        <td style="background-color: #0A3457;">RGB Value:</td>
+        <td style="background-color: #0A3457; color: #b7f1fd;">RGB Value:</td>
         <td>rgb(170, 10, 17)</td>
         <td>rgb(247, 128, 84)</td>
         <td>rgb(18, 59, 2)</td>
         <td>rgb(202, 103, 120)</td>
       </tr>
       <tr style="font-size=16px">
-        <td style="background-color: #0A3457;">HSL Value:</td>
+        <td style="background-color: #0A3457; color: #b7f1fd;">HSL Value:</td>
         <td>hsl(357, 89%, 35%)</td>
         <td>hsl(16, 91%, 65%)</td>
         <td>hsl(103, 93%, 12%)</td>
