--- a/colorScheme.html
+++ b/colorScheme.html
@@ -7,7 +7,7 @@
     <div style="text-align: center;">
       <h2>Flower Bouquet Color Scheme!</h2>
       <p>Here is a table that gives the colors in the picture below in different values.</p><br>
-      <img src="images/FlowerBouquet.jpg" alt="A flower bouquet full of red roses, white star of bethlehem, and coral chrysanthemum" width="280px" height="200px" align="center">
+      <img src="images/FlowerBouquet.jpg" alt="A flower bouquet full of red roses, white star of bethlehem, and coral chrysanthemum" width="280px" height="200px"><br>
     </div>
     <table border="1" align="center">
       <tr>
