--- a/Restaurant menu.html
+++ b/Restaurant menu.html
@@ -1,8 +1,134 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Zaffran Kitchen Resturant Menu</title>
+    <title>Zaffran Kitchen Indian Cuisine Menu</title>
   </head>
   <body>
-    
+    <div style="height=550px; width=400px;
+    margin:20px;
+    border:2px solid;
+    padding:20px;
+    background-image:url('');
+    background-repeat:no-repeat;
+    background-position:center">
+      <h1>Breakfast Menu</h1>
+      <h2>Entrees</h2>
+      <ul>
+        <li style="font-size: 20px";>Nihari Combo<br>
+        <span style="font-size: 14px";><i>served with two Naan and a glass of Lassi</i></span></li>
+        <li style="font-size: 20px";>Haleem Combo<br>
+        <span style="font-size: 14px";><i>served with two Naan</i></span></li>
+        <li style="font-size: 20px";>Halwa Puri Thali<br>
+        <span style="font-size: 14px";><i>Two Puris served with Halwa, spiced chickpeas, and a side of Raita and Pickled Onion</i></span></li>
+        <li style="font-size: 20px";>Family Combo<br>
+        <span style="font-size: 14px";><i>Haleem, Nihari, Halwa, four Naans, two Puris, and a jug of Lassi</i></span></li>
+      </ul>
+      <h2>Beverages</h2>
+      <ul>
+        <li style="font-size: 20px";>Salted Lassi</li>
+        <li style="font-size: 20px";>Sweet Lassi</li>
+        <li style="font-size: 20px";>Coffe (with/ without milk)</li>
+        <li style="font-size: 20px";>Masala Tea</li>
+      </ul>
+    </div>
+    <div style="height=550px; width=400px;
+    margin:20px;
+    border:2px solid;
+    padding:20px;
+    background-image:url('');
+    background-repeat:no-repeat;
+    background-position:center">
+      <h1>Lunch Menu</h1>
+      <h2>Appetizers</h2>
+      <ul>
+        <li style="font-size: 20px";><br>
+        <span style="font-size: 14px";><i></i></span></li>
+        <li style="font-size: 20px";><br>
+        <span style="font-size: 14px";><i></i></span></li>
+        <li style="font-size: 20px";><br>
+        <span style="font-size: 14px";><i></i></span></li>
+        <li style="font-size: 20px";><br>
+        <span style="font-size: 14px";><i></i></span></li>
+      </ul>
+      <h2>Entrees</h2>
+      <ul>
+        <li style="font-size: 20px";><br>
+        <span style="font-size: 14px";><i></i></span></li>
+        <li style="font-size: 20px";><br>
+        <span style="font-size: 14px";><i></i></span></li>
+        <li style="font-size: 20px";><br>
+        <span style="font-size: 14px";><i></i></span></li>
+        <li style="font-size: 20px";><br>
+        <span style="font-size: 14px";><i></i></span></li>
+      </ul>
+      <h2>Desserts</h2>
+      <ul>
+        <li style="font-size: 20px";><br>
+        <span style="font-size: 14px";><i></i></span></li>
+        <li style="font-size: 20px";><br>
+        <span style="font-size: 14px";><i></i></span></li>
+        <li style="font-size: 20px";><br>
+        <span style="font-size: 14px";><i></i></span></li>
+        <li style="font-size: 20px";><br>
+        <span style="font-size: 14px";><i></i></span></li>
+      </ul>
+      <h2>Beverages</h2>
+      <ul>
+        <li style="font-size: 20px";>Mango Lassi</li>
+        <li style="font-size: 20px";>Coke / Diet Coke</li>
+        <li style="font-size: 20px";>Lemonade</li>
+        <li style="font-size: 20px";>Coffe (with/ without milk)</li>
+        <li style="font-size: 20px";>Masala Tea</li>
+      </ul>
+    </div>
+    <div style="height=550px; width=400px;
+    margin:20px;
+    border:2px solid;
+    padding:20px;
+    background-image:url('');
+    background-repeat:no-repeat;
+    background-position:center">
+      <h1>Dinner Menu</h1>
+      <h2>Appetizers</h2>
+      <ul>
+        <li style="font-size: 20px";><br>
+        <span style="font-size: 14px";><i></i></span></li>
+        <li style="font-size: 20px";><br>
+        <span style="font-size: 14px";><i></i></span></li>
+        <li style="font-size: 20px";><br>
+        <span style="font-size: 14px";><i></i></span></li>
+        <li style="font-size: 20px";><br>
+        <span style="font-size: 14px";><i></i></span></li>
+      </ul>
+      <h2>Entrees</h2>
+      <ul>
+        <li style="font-size: 20px";><br>
+        <span style="font-size: 14px";><i></i></span></li>
+        <li style="font-size: 20px";><br>
+        <span style="font-size: 14px";><i></i></span></li>
+        <li style="font-size: 20px";><br>
+        <span style="font-size: 14px";><i></i></span></li>
+        <li style="font-size: 20px";><br>
+        <span style="font-size: 14px";><i></i></span></li>
+      </ul>
+      <h2>Desserts</h2>
+      <ul>
+        <li style="font-size: 20px";><br>
+        <span style="font-size: 14px";><i></i></span></li>
+        <li style="font-size: 20px";><br>
+        <span style="font-size: 14px";><i></i></span></li>
+        <li style="font-size: 20px";><br>
+        <span style="font-size: 14px";><i></i></span></li>
+        <li style="font-size: 20px";><br>
+        <span style="font-size: 14px";><i></i></span></li>
+      </ul>
+      <h2>Beverages</h2>
+      <ul>
+        <li style="font-size: 20px";>Mango Lassi</li>
+        <li style="font-size: 20px";>Coke / Diet Coke</li>
+        <li style="font-size: 20px";>Lemonade</li>
+        <li style="font-size: 20px";>Blue Lagoon</li>
+        <li style="font-size: 20px";>Falooda</li>
+      </ul>
+    </div>
   </body>
