--- a/Restaurant menu.html
+++ b/Restaurant menu.html
@@ -24,11 +24,11 @@
         <span style="font-size: 14px";><i>Haleem, Nihari, Halwa, four Naans, two Puris, and a jug of Lassi</i></span></li>
       </ul>
       <h2>Beverages</h2>
-      <ul>
-        <li style="font-size: 20px";>Salted Lassi</li>
-        <li style="font-size: 20px";>Sweet Lassi</li>
-        <li style="font-size: 20px";>Coffe (with/ without milk)</li>
-        <li style="font-size: 20px";>Masala Tea</li>
+      <ul style="font-size: 20px";>
+        <li>Salted Lassi</li>
+        <li>Sweet Lassi</li>
+        <li>Coffe <i>(with/ without milk)</i></li>
+        <li>Masala Tea</li>
       </ul>
     </div>
     <div style="height=550px; width=400px;
@@ -41,44 +41,41 @@
       <h1>Lunch Menu</h1>
       <h2>Appetizers</h2>
       <ul>
-        <li style="font-size: 20px";><br>
-        <span style="font-size: 14px";><i></i></span></li>
-        <li style="font-size: 20px";><br>
-        <span style="font-size: 14px";><i></i></span></li>
-        <li style="font-size: 20px";><br>
-        <span style="font-size: 14px";><i></i></span></li>
-        <li style="font-size: 20px";><br>
-        <span style="font-size: 14px";><i></i></span></li>
+        <li style="font-size: 20px";>Samosas<br>
+        <span style="font-size: 14px";><i>Served with Mint and Tamarind sauce</i></span></li>
+        <li style="font-size: 20px";>Chaat<br>
+        <span style="font-size: 14px";><i>Samosa, Aloo Tikki, Papdi</i></span></li>
+        <li style="font-size: 20px";>Manchuriya<br>
+        <span style="font-size: 14px";><i>Chicken, Baby Corn, Paneer, Cauliflower, Veggie</i></span></li>
+        <li style="font-size: 20px";>Spring rolls<br>
+        <span style="font-size: 14px";><i>Chicken/ Egg/ Egg and Chicken/ Veggie</i></span></li>
       </ul>
       <h2>Entrees</h2>
       <ul>
-        <li style="font-size: 20px";><br>
-        <span style="font-size: 14px";><i></i></span></li>
-        <li style="font-size: 20px";><br>
-        <span style="font-size: 14px";><i></i></span></li>
-        <li style="font-size: 20px";><br>
-        <span style="font-size: 14px";><i></i></span></li>
-        <li style="font-size: 20px";><br>
-        <span style="font-size: 14px";><i></i></span></li>
+        <li style="font-size: 20px";>Mutton Ghee Roast<br>
+        <span style="font-size: 14px";><i>Served with Egg Plant and Chilli Masala and Raita</i></span></li>
+        <li style="font-size: 20px";>Biryani<br>
+        <span style="font-size: 14px";><i>Chicken/ Lamb/ Veg</i></span></li>
+        <li style="font-size: 20px";>Pulao<br>
+        <span style="font-size: 14px";><i>Served with Goat or Chicken Curry</i></span></li>
+        <li style="font-size: 20px";>Lemon Rice</li>
+        <li style="font-size: 20px";>Kids Meal<br>
+        <span style="font-size: 14px";><i>Fish, Chicken Nuggets, Sandwich, and Orange Juice</i></span></li>
       </ul>
       <h2>Desserts</h2>
-      <ul>
-        <li style="font-size: 20px";><br>
-        <span style="font-size: 14px";><i></i></span></li>
-        <li style="font-size: 20px";><br>
-        <span style="font-size: 14px";><i></i></span></li>
-        <li style="font-size: 20px";><br>
-        <span style="font-size: 14px";><i></i></span></li>
-        <li style="font-size: 20px";><br>
-        <span style="font-size: 14px";><i></i></span></li>
+      <ul style="font-size: 20px";>
+        <li>Gajar Ka Halwa</li>
+        <li>Rabdi</li>
+        <li>Burfi <i>(Kaju/ Badam)</i></li>
+        <li>Kheer</li>
       </ul>
       <h2>Beverages</h2>
-      <ul>
-        <li style="font-size: 20px";>Mango Lassi</li>
-        <li style="font-size: 20px";>Coke / Diet Coke</li>
-        <li style="font-size: 20px";>Lemonade</li>
-        <li style="font-size: 20px";>Coffe (with/ without milk)</li>
-        <li style="font-size: 20px";>Masala Tea</li>
+      <ul style="font-size: 20px";>
+        <li>Mango Lassi</li>
+        <li>Coke / Diet Coke</li>
+        <li>Lemonade</li>
+        <li>Coffe <i>(with/ without milk)</i></li>
+        <li>Masala Tea</li>
       </ul>
     </div>
     <div style="height=550px; width=400px;
@@ -91,44 +88,42 @@
       <h1>Dinner Menu</h1>
       <h2>Appetizers</h2>
       <ul>
-        <li style="font-size: 20px";><br>
-        <span style="font-size: 14px";><i></i></span></li>
-        <li style="font-size: 20px";><br>
-        <span style="font-size: 14px";><i></i></span></li>
-        <li style="font-size: 20px";><br>
-        <span style="font-size: 14px";><i></i></span></li>
-        <li style="font-size: 20px";><br>
-        <span style="font-size: 14px";><i></i></span></li>
+        <li style="font-size: 20px";>Chilli Chicken<br>
+        <span style="font-size: 14px";><i>Available in Paneer and Baby Corn</i></span></li>
+        <li style="font-size: 20px";>Pakora<br>
+        <span style="font-size: 14px";><i>Chicken/ Onion/ Veg</i></span></li>
+        <li style="font-size: 20px";>Pav Bhaji</li>
+        <li style="font-size: 20px";>Dahi Puri</li>
+        <li style="font-size: 20px";>Pani Puri</li>
       </ul>
       <h2>Entrees</h2>
       <ul>
-        <li style="font-size: 20px";><br>
-        <span style="font-size: 14px";><i></i></span></li>
-        <li style="font-size: 20px";><br>
-        <span style="font-size: 14px";><i></i></span></li>
-        <li style="font-size: 20px";><br>
-        <span style="font-size: 14px";><i></i></span></li>
-        <li style="font-size: 20px";><br>
-        <span style="font-size: 14px";><i></i></span></li>
+        <li style="font-size: 20px";>Chicken Tikka Masala<br>
+        <span style="font-size: 14px";><i>Served with one Naan and Rice</i></span></li>
+        <li style="font-size: 20px";>Butter Chicken<br>
+        <span style="font-size: 14px";><i>Served with one Naan and Rice</i></span></li>
+        <li style="font-size: 20px";>Mutton Rogan Josh<br>
+        <span style="font-size: 14px";><i>Served with two Naans or Jeera rice</i></span></li>
+        <li style="font-size: 20px";>Kadai Masala <i>(Chicken/ Paneer/ Fish)</i><br>
+        <span style="font-size: 14px";><i>Served with one Naan and Rice</i></span></li>
+        <li style="font-size: 20px";>Biryani<br>
+        <span style="font-size: 14px";><i>Chicken/ Lamb/ Prawns/ Veg</i></span></li>
       </ul>
       <h2>Desserts</h2>
-      <ul>
-        <li style="font-size: 20px";><br>
-        <span style="font-size: 14px";><i></i></span></li>
-        <li style="font-size: 20px";><br>
-        <span style="font-size: 14px";><i></i></span></li>
-        <li style="font-size: 20px";><br>
-        <span style="font-size: 14px";><i></i></span></li>
-        <li style="font-size: 20px";><br>
-        <span style="font-size: 14px";><i></i></span></li>
+      <ul style="font-size: 20px;">
+        <li>Gulab Jamun</li>
+        <li>Double Ka Meetha</li>
+        <li>Rasmalai</li>
+        <li>Cake</li>
       </ul>
       <h2>Beverages</h2>
-      <ul>
-        <li style="font-size: 20px";>Mango Lassi</li>
-        <li style="font-size: 20px";>Coke / Diet Coke</li>
-        <li style="font-size: 20px";>Lemonade</li>
-        <li style="font-size: 20px";>Blue Lagoon</li>
-        <li style="font-size: 20px";>Falooda</li>
+      <ul style="font-size: 20px;">
+        <li>Mango Lassi</li>
+        <li>Fresh Juice</li>
+        <li>Lemonade</li>
+        <li>Falooda</li>
+        <li>Chai <i>(Masala/ Normal)</i></li>
+        <li>Soft Drinks</li>
       </ul>
     </div>
   </body>
