--- a/Restaurant menu.html
+++ b/Restaurant menu.html
@@ -20,6 +20,8 @@
         <span style="font-size: 14px";><i>served with two Naan</i></span></li>
         <li style="font-size: 20px";>Halwa Puri Thali<br>
         <span style="font-size: 14px";><i>Two Puris served with Halwa, spiced chickpeas, and a side of Raita and Pickled Onion</i></span></li>
+        <li style="font-size: 20px";>Masala Dosa</li>
+        <li style="font-size: 20px";>Idli Vada</li>
         <li style="font-size: 20px";>Family Combo<br>
         <span style="font-size: 14px";><i>Haleem, Nihari, Halwa, four Naans, two Puris, and a jug of Lassi</i></span></li>
       </ul>
