--- a/RestaurantMenu.html
+++ b/RestaurantMenu.html
@@ -8,7 +8,7 @@
     margin:20px;
     border:2px solid;
     padding:20px;
-    background-image:url('');
+    background-image:url('images/DosaPic.jpeg');
     background-repeat:no-repeat;
     background-position:center">
       <h1>Breakfast Menu</h1>
