--- a/RestaurantMenu.html
+++ b/RestaurantMenu.html
@@ -37,7 +37,7 @@
     margin:20px;
     border:2px solid;
     padding:20px;
-    background-image:url('');
+    background-image:url('images/LunchSide.jpg');
     background-repeat:no-repeat;
     background-position:center">
       <h1>Lunch Menu</h1>
