--- a/RestaurantMenu.html
+++ b/RestaurantMenu.html
@@ -84,7 +84,7 @@
     margin:20px;
     border:2px solid;
     padding:20px;
-    background-image:url('');
+    background-image:url('images/IndianDinner.jpg');
     background-repeat:no-repeat;
     background-position:center">
       <h1>Dinner Menu</h1>
