--- a/RestaurantMenu.html
+++ b/RestaurantMenu.html
@@ -10,7 +10,8 @@
     padding:20px;
     background-image:url('images/DosaPic.jpeg');
     background-repeat:no-repeat;
-    background-position:center">
+    background-position:center;
+    color: #FFFFFF;">
       <h1>Breakfast Menu</h1>
       <h2>Entrees</h2>
       <ul>
@@ -39,7 +40,8 @@
     padding:20px;
     background-image:url('images/LunchSide.jpg');
     background-repeat:no-repeat;
-    background-position:center">
+    background-position:center";
+    color: #FFFFFF;>
       <h1>Lunch Menu</h1>
       <h2>Appetizers</h2>
       <ul>
