--- a/RestaurantMenu.html
+++ b/RestaurantMenu.html
@@ -11,6 +11,7 @@
     background-image:url('images/DosaPic.jpeg');
     background-repeat:no-repeat;
     background-position:center;
+    background-size: cover;
     color: #FFFFFF;">
       <h1>Breakfast Menu</h1>
       <h2>Entrees</h2>
@@ -40,8 +41,9 @@
     padding:20px;
     background-image:url('images/LunchSide.jpg');
     background-repeat:no-repeat;
-    background-position:center";
-    color: #FFFFFF;>
+    background-position:center;
+    background-size: cover;
+    color: #FFFFFF;">
       <h1>Lunch Menu</h1>
       <h2>Appetizers</h2>
       <ul>
@@ -88,7 +90,8 @@
     padding:20px;
     background-image:url('images/IndianDinner.jpg');
     background-repeat:no-repeat;
-    background-position:center">
+    background-position:center;
+    background-size: cover;">
       <h1>Dinner Menu</h1>
       <h2>Appetizers</h2>
       <ul>
@@ -131,3 +134,4 @@
       </ul>
     </div>
   </body>
+</html>
