--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <a href="EmployeeInfoTable.html">Assignment 2.4 Building Tables</a><br>
       <a href="MathTest.html">Assignment 2.6 Math Test Form</a><br>
       <a href="colorScheme.html">Assignment 3.2 Color Scheme</a><br>
-      <a href="RestaurantMenu.html">Assignment 3.4 Restaurant Menu</a><br>
+      <a href="RestaurantMenu.html">Assignment 3.4 Restaurant Menu!</a><br>
     </p>
     
   </body>
