--- a/RestaurantMenu.html
+++ b/RestaurantMenu.html
@@ -6,7 +6,7 @@
   <body>
     <div style="height=550px; width=400px;
     margin:20px;
-    border:2px solid;
+    border:2px solid #FFFFFF;
     padding:20px;
     background-image:url('images/DosaPic.jpeg');
     background-repeat:no-repeat;
@@ -37,9 +37,9 @@
     </div>
     <div style="height=550px; width=400px;
     margin:20px;
-    border:2px solid;
+    border:2px solid #FFFFFF;
     padding:20px;
-    background-image:url('images/LunchSide.jpg');
+    background-image:url('images/Lunch_Pic.jpg');
     background-repeat:no-repeat;
     background-position:center;
     background-size: cover;
