--- a/RestaurantMenu.html
+++ b/RestaurantMenu.html
@@ -4,6 +4,7 @@
     <title>Zaffran Kitchen Indian Cuisine Menu</title>
   </head>
   <body>
+    <h1 style="font-family: 'Lobster', cursive;">Zaffran Kitchen Indian Cuisine Menu</h1>
     <div style="height=550px; width=400px;
     margin:20px;
     border:2px solid #FFFFFF;
@@ -13,8 +14,8 @@
     background-position:center;
     background-size: cover;
     color: #FFFFFF;">
-      <h1>Breakfast Menu</h1>
-      <h2>Entrees</h2>
+      <h2>Breakfast Menu</h2>
+      <h3>Entrees</h3>
       <ul>
         <li style="font-size: 20px";>Nihari Combo<br>
         <span style="font-size: 14px";><i>served with two Naan and a glass of Lassi</i></span></li>
@@ -27,7 +28,7 @@
         <li style="font-size: 20px";>Family Combo<br>
         <span style="font-size: 14px";><i>Haleem, Nihari, Halwa, four Naans, two Puris, and a jug of Lassi</i></span></li>
       </ul>
-      <h2>Beverages</h2>
+      <h3>Beverages</h3>
       <ul style="font-size: 20px";>
         <li>Salted Lassi</li>
         <li>Sweet Lassi</li>
@@ -44,8 +45,8 @@
     background-position:center;
     background-size: cover;
     color: #FFFFFF;">
-      <h1>Lunch Menu</h1>
-      <h2>Appetizers</h2>
+      <h2>Lunch Menu</h2>
+      <h3>Appetizers</h3>
       <ul>
         <li style="font-size: 20px";>Samosas<br>
         <span style="font-size: 14px";><i>Served with Mint and Tamarind sauce</i></span></li>
@@ -56,7 +57,7 @@
         <li style="font-size: 20px";>Spring rolls<br>
         <span style="font-size: 14px";><i>Chicken/ Egg/ Egg and Chicken/ Veggie</i></span></li>
       </ul>
-      <h2>Entrees</h2>
+      <h3>Entrees</h3>
       <ul>
         <li style="font-size: 20px";>Mutton Ghee Roast<br>
         <span style="font-size: 14px";><i>Served with Egg Plant and Chilli Masala and Raita</i></span></li>
@@ -68,14 +69,14 @@
         <li style="font-size: 20px";>Kids Meal<br>
         <span style="font-size: 14px";><i>Fish, Chicken Nuggets, Sandwich, and Orange Juice</i></span></li>
       </ul>
-      <h2>Desserts</h2>
+      <h3>Desserts</h3>
       <ul style="font-size: 20px";>
         <li>Gajar Ka Halwa</li>
         <li>Rabdi</li>
         <li>Burfi <i>(Kaju/ Badam)</i></li>
         <li>Kheer</li>
       </ul>
-      <h2>Beverages</h2>
+      <h3>Beverages</h3>
       <ul style="font-size: 20px";>
         <li>Mango Lassi</li>
         <li>Coke / Diet Coke</li>
@@ -92,8 +93,8 @@
     background-repeat:no-repeat;
     background-position:center;
     background-size: cover;">
-      <h1>Dinner Menu</h1>
-      <h2>Appetizers</h2>
+      <h2>Dinner Menu</h2>
+      <h3>Appetizers</h3>
       <ul>
         <li style="font-size: 20px";>Chilli Chicken<br>
         <span style="font-size: 14px";><i>Available in Paneer and Baby Corn</i></span></li>
@@ -103,7 +104,7 @@
         <li style="font-size: 20px";>Dahi Puri</li>
         <li style="font-size: 20px";>Pani Puri</li>
       </ul>
-      <h2>Entrees</h2>
+      <h3>Entrees</h3>
       <ul>
         <li style="font-size: 20px";>Chicken Tikka Masala<br>
         <span style="font-size: 14px";><i>Served with one Naan and Rice</i></span></li>
@@ -116,14 +117,14 @@
         <li style="font-size: 20px";>Biryani<br>
         <span style="font-size: 14px";><i>Chicken/ Lamb/ Prawns/ Veg</i></span></li>
       </ul>
-      <h2>Desserts</h2>
+      <h3>Desserts</h3>
       <ul style="font-size: 20px;">
         <li>Gulab Jamun</li>
         <li>Double Ka Meetha</li>
         <li>Rasmalai</li>
         <li>Cake</li>
       </ul>
-      <h2>Beverages</h2>
+      <h3>Beverages</h3>
       <ul style="font-size: 20px;">
         <li>Mango Lassi</li>
         <li>Fresh Juice</li>
