--- a/RestaurantMenu.html
+++ b/RestaurantMenu.html
@@ -4,7 +4,7 @@
     <title>Zaffran Kitchen Indian Cuisine Menu</title>
   </head>
   <body>
-    <h1 style="font-family: 'Lobster', cursive;">Zaffran Kitchen Indian Cuisine Menu</h1>
+    <h1 style="font-family: 'Lobster', cursive; text-align: center;">Zaffran Kitchen Indian Cuisine Menu</h1>
     <div style="height=550px; width=400px;
     margin:20px;
     border:2px solid #FFFFFF;
