--- a/StylishSchedule.html
+++ b/StylishSchedule.html
@@ -1,1 +1,40 @@
-
+<!DOCTYPE html>
+<html>
+  <head>
+    <title></title>
+  </head>
+  <body>
+    <h3></h3>
+    <p></p>
+    <table border="1">
+        <caption></caption>
+      <tr>
+        <th></th>
+        <th></th>
+        <th></th>
+        <th colspan="2"></th>
+      </tr>
+      <tr>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+      </tr>
+      <tr>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+      </tr>
+      <tr>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+      </tr>
+    </table>
+  </body>
+</html>
