--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
       <a href="MathTest.html">Assignment 2.6 Math Test Form</a><br>
       <a href="colorScheme.html">Assignment 3.2 Color Scheme</a><br>
       <a href="RestaurantMenu.html">Assignment 3.4 Restaurant Menu</a><br>
+      <a href="StylishSchedule.html">Assignment 3.6 Stylish Schedule</a><br>
     </p>
     
   </body>
