--- a/StylishSchedule.html
+++ b/StylishSchedule.html
@@ -11,8 +11,13 @@
         text-align: center;
         margin-top: 25px
       }
+      p {
+        text-align: center;
+      }
       table {
         margin: 30px;
+        border: 1px;
+        align: center;
         border-collapse: collapse;
         background-color: #fca297;
       }
@@ -42,7 +47,7 @@
         background-color: #2e0d2e;
         color: white;
       }
-      .highligh {
+      tr.highlight {
         background-color: #b0f7b0;
         font-weight: bold;
       }
@@ -50,7 +55,7 @@
   </head>
   <body>
     <h1>My Daily Busy Schedule :]</h1>
-    <p></p>
+    <p>The table below has all the information of one of my busiest schedules.</p>
     <table>
       <tr>
         <th>Time</th>
