--- a/StylishSchedule.html
+++ b/StylishSchedule.html
@@ -4,12 +4,12 @@
     <title>My Busiest Schedule</title>
     <style>
       body {
-        font-family: Garamond, serif;
+        font-family: 'Garamond', serif;
         color: #0e064a; 
       }
       h1 {
         text-align: center;
-        margin-top: 25px
+        margin-top: 25px;
       }
       p {
         text-align: center;
@@ -17,13 +17,12 @@
       table {
         margin: 30px;
         border: 1px;
-        align: center;
         border-collapse: collapse;
         background-color: #fca297;
       }
       th {
-        background-color: #007bff
-        color: white;
+        background-color: #007bff;
+        color: #ffffff;
         font-size: 18px;
       }
       td {
@@ -45,7 +44,7 @@
       }
       .night {
         background-color: #2e0d2e;
-        color: white;
+        color: #ffffff;
       }
       tr.highlight {
         background-color: #b0f7b0;
@@ -56,7 +55,7 @@
   <body>
     <h1>My Daily Busy Schedule :]</h1>
     <p>The table below has all the information of one of my busiest schedules.</p>
-    <table>
+    <table align="center">
       <tr>
         <th>Time</th>
         <th>Activity</th>
