--- a/StylishSchedule.html
+++ b/StylishSchedule.html
@@ -15,18 +15,19 @@
         text-align: center;
       }
       table {
-        margin: 30px;
-        border: 1px;
+        margin: 30px auto;
+        border: 1px solid #000;
         border-collapse: collapse;
         background-color: #fca297;
       }
       th {
+        border: 1px solid #000;
         background-color: #007bff;
         color: #ffffff;
         font-size: 18px;
       }
       td {
-        border: 1px solid;
+        border: 1px solid #000;
         padding: 12px;
         text-align: center;
       }
@@ -55,7 +56,8 @@
   <body>
     <h1>My Daily Busy Schedule :]</h1>
     <p>The table below has all the information of one of my busiest schedules.</p>
-    <table align="center">
+    <table>
+      <caption>BUSY SCHEDULES</caption>
       <tr>
         <th>Time</th>
         <th>Activity</th>
