--- a/StylishSchedule.html
+++ b/StylishSchedule.html
@@ -4,7 +4,7 @@
     <title>My Busiest Schedule</title>
     <style>
       body {
-        font-family: 'Garamond', serif;
+        font-family: "Palatino Linotype", "Book Antiqua", Palatino, serif;
         color: #0e064a; 
       }
       h1 {
@@ -18,7 +18,7 @@
         margin: 30px auto;
         border: 1px solid #000;
         border-collapse: collapse;
-        background-color: #fca297;
+        background-color: #ffebf0;
       }
       th {
         border: 1px solid #000;
