--- a/StylishSchedule.html
+++ b/StylishSchedule.html
@@ -6,6 +6,10 @@
       body {
         font-family: "Palatino Linotype", "Book Antiqua", Palatino, serif;
         color: #0e064a; 
+        background-image: url('');
+        background-repeat: no-repeat;
+        background-size: cover;
+        background-position: center;
       }
       h1 {
         text-align: center;
