--- a/StylishSchedule.html
+++ b/StylishSchedule.html
@@ -6,7 +6,7 @@
       body {
         font-family: "Palatino Linotype", "Book Antiqua", Palatino, serif;
         color: #0e064a; 
-        background-image: url('');
+        background-image: url('images/scheduleBackground.jpeg');
         background-repeat: no-repeat;
         background-size: cover;
         background-position: center;
