--- a/StylishSchedule.html
+++ b/StylishSchedule.html
@@ -14,9 +14,14 @@
       h1 {
         text-align: center;
         margin-top: 25px;
+        color: #ffffff;
       }
       p {
         text-align: center;
+        color: #ffffff;
+      }
+      caption {
+        color: #ffffff;
       }
       table {
         margin: 30px auto;
