--- a/StylishSchedule.html
+++ b/StylishSchedule.html
@@ -18,6 +18,7 @@
       }
       p {
         text-align: center;
+        font-size: 16px
         color: #ffffff;
       }
       caption {
@@ -25,6 +26,7 @@
       }
       table {
         margin: 30px auto;
+        font-size: 16px
         border: 1px solid #000;
         border-collapse: collapse;
         background-color: #ffebf0;
@@ -33,7 +35,7 @@
         border: 1px solid #000;
         background-color: #007bff;
         color: #ffffff;
-        font-size: 18px;
+        font-size: 20px;
       }
       td {
         border: 1px solid #000;
