--- a/StylishSchedule.html
+++ b/StylishSchedule.html
@@ -18,7 +18,7 @@
       }
       p {
         text-align: center;
-        font-size: 16px
+        font-size: 16px;
         color: #ffffff;
       }
       caption {
@@ -26,7 +26,7 @@
       }
       table {
         margin: 30px auto;
-        font-size: 16px
+        font-size: 16px;
         border: 1px solid #000;
         border-collapse: collapse;
         background-color: #ffebf0;
